<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/calculator_layout_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:saveEnabled="true"
        android:hint="@string/field1"
        android:layout_marginStart="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp">
    </EditText>

    <EditText
        android:id="@+id/calculator_layout_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:saveEnabled="true"
        android:hint="@string/field2"
        android:layout_below="@+id/calculator_layout_num1"
        android:layout_alignStart="@+id/calculator_layout_num1" />

    <RadioGroup
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_alignEnd="@+id/calculator_layout_num2"
        android:layout_alignStart="@+id/calculator_layout_num2"
        android:layout_below="@+id/calculator_layout_num2"
        android:layout_marginTop="30dp"
        android:id="@+id/rg_operations">

        <RadioButton
            android:id="@+id/radio_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:hint="@string/operation1"
            />

        <RadioButton
            android:id="@+id/radio_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:saveEnabled="true"
            android:hint="@string/operation2"
            />

        <RadioButton
            android:id="@+id/radio_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:hint="@string/operation3"
            />

        <RadioButton
            android:id="@+id/radio_multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:hint="@string/operation4"
            />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox_float"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rg_operations"
        android:layout_below="@+id/rg_operations"
        android:layout_marginTop="21dp"
        android:checked="true"
        android:onClick="onClick"
        android:hint="@string/float_numbers"/>

    <CheckBox
        android:id="@+id/checkbox_signed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_alignStart="@+id/checkbox_float"
        android:layout_below="@+id/checkbox_float"
        android:onClick="onClick"
        android:hint="@string/signed_numbers"/>


    <EditText
        android:id="@+id/calculator_layout_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:saveEnabled="true"
        android:hint="@string/result_field"
        android:layout_below="@+id/checkbox_signed"
        android:layout_alignStart="@+id/checkbox_signed"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        android:layout_below="@+id/calculator_layout_result"
        android:layout_alignStart="@+id/calculator_layout_result"
        android:background = "@drawable/select_button"
        android:textColor="@color/select_button_color"
        android:layout_marginTop="12dp"
        android:layout_alignEnd="@+id/calculator_layout_result" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background = "@drawable/select_button"
        android:textColor="@color/select_button_color"
        android:text="@string/menu"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
